--- a/assets/styles.css
+++ b/assets/styles.css
@@ -770,6 +770,11 @@ select {
   margin-top: calc(2.4rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(2.4rem * var(--tw-space-y-reverse));
 }
+.tw-space-x-1 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-x-reverse: 0;
+  margin-right: calc(0.4rem * var(--tw-space-x-reverse));
+  margin-left: calc(0.4rem * calc(1 - var(--tw-space-x-reverse)));
+}
 .tw-overflow-hidden {
   overflow: hidden;
 }
@@ -842,6 +847,10 @@ select {
   font-size: 1.4rem;
   line-height: 2rem;
 }
+.tw-text-xl {
+  font-size: 2rem;
+  line-height: 2.8rem;
+}
 .tw-font-bold {
   font-weight: 700;
 }
@@ -870,6 +879,21 @@ select {
 .tw-text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+.tw-text-gray-300 {
+  --tw-text-opacity: 1;
+  color: rgb(209 213 219 / var(--tw-text-opacity));
+}
+.tw-text-stone-500 {
+  --tw-text-opacity: 1;
+  color: rgb(120 113 108 / var(--tw-text-opacity));
+}
+.tw-text-stone-700 {
+  --tw-text-opacity: 1;
+  color: rgb(68 64 60 / var(--tw-text-opacity));
+}
+.tw-no-underline {
+  text-decoration-line: none;
 }
 .tw-ring-2 {
   --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
