--- a/snippets/card-product.liquid
+++ b/snippets/card-product.liquid
@@ -37,7 +37,8 @@
   <div class="card-wrapper product-card-wrapper underline-links-hover">
     <div
       class="
-        card card--{{ settings.card_style }}
+        card
+        card--{{ settings.card_style }}
         {% if card_product.featured_media %} card--media{% else %} card--text{% endif %}
         {% if settings.card_style == 'card' %} color-{{ settings.card_color_scheme }} gradient{% endif %}
         {% if image_shape and image_shape != 'default' %} card--shape{% endif %}
@@ -148,13 +149,49 @@
             <a
               href="{{ card_product.url }}"
               id="CardLink-{{ section_id }}-{{ card_product.id }}"
-              class="full-unstyled-link"
+              class="tw-text-xl tw-font-bold tw-no-underline tw-text-stone-700"
               aria-labelledby="CardLink-{{ section_id }}-{{ card_product.id }} Badge-{{ section_id }}-{{ card_product.id }}"
             >
-              {{ card_product.title | escape }}
+              {% liquid
+                assign colorDisplay = ''
+                assign color = card_product.metafields.custom.color.value[0]
+
+                if color == 'Black and White'
+                  assign colorDisplay = 'B&W'
+                else
+                  assign colorDisplay = color
+                endif
+
+                assign productTitle = ''
+                if card_product.metafields.custom['product-template-name'].value
+                  assign productTitle = card_product.metafields.custom['product-template-name'].value | escape
+                else
+                  assign productTitle = card_product.title | escape
+                endif
+              %}
+
+              {{ colorDisplay }}
+              {{ productTitle }}
             </a>
           </h3>
-          <div class="card-information">
+          <div>
+            <span class="tw-text-base tw-text-stone-700">
+              {% if card_product.metafields.custom['product-template-options'].value %}
+                <span>{{- card_product.metafields.custom['product-template-options'].value -}}</span>
+              {%- endif -%}
+              {% if card_product.metafields.custom.product_template_caption.value %}
+                <span> · </span>
+                {{- card_product.metafields.custom.product_template_caption.value -}}
+              {%- endif -%}
+            </span>
+
+            <div class="tw-text-sm tw-text-stone-500">
+              <span>{{ card_product.metafields.custom['product-format'].value -}}</span>
+              <span> · {{ card_product.metafields.custom['product-type'].value }}</span>
+              <span> · {{ card_product.metafields.custom['product-shape'].value }}</span>
+              <span> · {{ card_product.metafields.custom['product-size'].value }}</span>
+            </div>
+
             {%- if show_vendor -%}
               <span class="visually-hidden">{{ 'accessibility.vendor' | t }}</span>
               <div class="caption-with-letter-spacing light">{{ card_product.vendor }}</div>
@@ -345,7 +382,8 @@
   <div class="card-wrapper product-card-wrapper underline-links-hover">
     <div
       class="
-        card card--{{ settings.card_style }}
+        card
+        card--{{ settings.card_style }}
         {% if extend_height %} card--extend-height{% endif %}
         {% if settings.card_style == 'card' %} color-{{ settings.card_color_scheme }} gradient{% endif %}
       "
