--- a/assets/styles.css
+++ b/assets/styles.css
@@ -683,17 +683,8 @@ select {
   white-space: nowrap;
   border-width: 0;
 }
-.tw-pointer-events-none {
-  pointer-events: none;
-}
-.tw-absolute {
-  position: absolute;
-}
 .tw-relative {
   position: relative;
-}
-.-tw-inset-px {
-  inset: -1px;
 }
 .tw-mx-auto {
   margin-left: auto;
@@ -750,11 +741,17 @@ select {
 .tw-flex-shrink-0 {
   flex-shrink: 0;
 }
+.tw-cursor-default {
+  cursor: default;
+}
 .tw-cursor-pointer {
   cursor: pointer;
 }
 .tw-grid-cols-1 {
   grid-template-columns: repeat(1, minmax(0, 1fr));
+}
+.tw-grid-cols-2 {
+  grid-template-columns: repeat(2, minmax(0, 1fr));
 }
 .tw-items-center {
   align-items: center;
@@ -786,9 +783,6 @@ select {
 }
 .tw-border {
   border-width: 1px;
-}
-.tw-border-2 {
-  border-width: 2px;
 }
 .tw-border-gray-300 {
   --tw-border-opacity: 1;
@@ -920,6 +914,10 @@ select {
 
   .sm\:tw-flex {
     display: flex;
+  }
+
+  .sm\:tw-grid-cols-2 {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
   .sm\:tw-grid-cols-3 {
