--- a/snippets/header-drawer.liquid
+++ b/snippets/header-drawer.liquid
@@ -1,3 +1,5 @@
+<script src="{{ 'cart.js' | asset_url }}" defer="defer"></script>
+<script defer src="https://cdn.customily.com/shopify/static/customily.shopify.script.unified.js"></script>
 {% comment %}
   Renders a header drawer menu for mobile and desktop.
 
