--- a/assets/styles.css
+++ b/assets/styles.css
@@ -562,21 +562,6 @@ select {
 
   /* Add the color scheme classes here */
 
-  .btn {
-    display: inline-block;
-    padding: 0.5rem 1rem;
-    border-radius: 0.25rem;
-    font-weight: bold;
-    cursor: pointer;
-  }
-
-  .btn-success {
-  --tw-bg-opacity: 1;
-  background-color: rgb(34 197 94 / var(--tw-bg-opacity));
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
 *, ::before, ::after {
   --tw-border-spacing-x: 0;
   --tw-border-spacing-y: 0;
@@ -1466,6 +1451,9 @@ select {
 }
 .metafield-rich_text_field ul {
   margin: 0;
+}
+.pf-pdf-container {
+  height: 60rem;
 }
 .hover\:tw-bg-stone-50:hover {
   --tw-bg-opacity: 1;
