--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1293,8 +1293,17 @@ select {
   white-space: nowrap;
   border-width: 0;
 }
+.tw-absolute {
+  position: absolute;
+}
 .tw-relative {
   position: relative;
+}
+.tw-bottom-1 {
+  bottom: 0.4rem;
+}
+.tw-left-1 {
+  left: 0.4rem;
 }
 .tw-my-5 {
   margin-top: 2rem;
@@ -1389,6 +1398,9 @@ select {
 .tw-rounded-md {
   border-radius: 0.6rem;
 }
+.tw-rounded-sm {
+  border-radius: 0.2rem;
+}
 .tw-border {
   border-width: 1px;
 }
@@ -1409,6 +1421,10 @@ select {
 .tw-bg-background {
   --tw-bg-opacity: 1;
   background-color: rgba(var(--color-background), var(--tw-bg-opacity));
+}
+.tw-bg-button {
+  --tw-bg-opacity: 1;
+  background-color: rgba(var(--color-button), var(--tw-bg-opacity));
 }
 .tw-px-1 {
   padding-left: 0.4rem;
@@ -1439,6 +1455,9 @@ select {
 .tw-text-3xl {
   font-size: 3rem;
   line-height: 3.6rem;
+}
+.tw-text-\[20px\] {
+  font-size: 20px;
 }
 .tw-text-base {
   font-size: 1.6rem;
