Adding fix to allow for AI files to be upload for customily links

--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -1233,6 +1233,11 @@
       document.querySelector('#Variants-{{ section.id }}').addEventListener('change', function (event) {
         hiddenInput.value = event.currentTarget.value;
       });
+
+      const inputs = document.querySelectorAll('input[accept=".eps, .pdf, .svg"]');
+      inputs.forEach((input) => {
+        input.setAttribute('accept', '.eps, .pdf, .svg, .ai');
+      });
     });
   </script>
 
