--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -264,6 +264,10 @@
     <script src="{{ 'alpinejs.min.js' | asset_url }}" defer></script>
     <script src="{{ 'swiper-bundle.min.js' | asset_url }}" defer></script>
     {{ 'swiper-bundle.min.css' | asset_url | stylesheet_tag }}
+    <script
+      async
+      src="{{ 'clearbit.js' | asset_url }}"
+    ></script>
 
     <script>
       document.documentElement.className = document.documentElement.className.replace('no-js', 'js');
