--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -266,7 +266,7 @@
     {{ 'swiper-bundle.min.css' | asset_url | stylesheet_tag }}
     <script
       async
-      src="{{ 'clearbit.js' | asset_url }}"
+      src="https://tag.clearbitscripts.com/v1/pk_97f3ebd2b9d19a285aa3ba468a1d4154/tags.js"
     ></script>
 
     <script>
