--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -267,6 +267,7 @@
     <script
       async
       src="https://tag.clearbitscripts.com/v1/pk_97f3ebd2b9d19a285aa3ba468a1d4154/tags.js"
+      referrerpolicy="strict-origin-when-cross-origin"
     ></script>
 
     <script>
