--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -264,6 +264,13 @@
     <script src="{{ 'alpinejs.min.js' | asset_url }}" defer></script>
     <script src="{{ 'swiper-bundle.min.js' | asset_url }}" defer></script>
     {{ 'swiper-bundle.min.css' | asset_url | stylesheet_tag }}
+
+    <script
+      id="hs-script-loader"
+      async
+      defer
+      src="//js.hs-scripts.com/44707895.js"
+    ></script>
     <script
       async
       src="https://tag.clearbitscripts.com/v1/pk_97f3ebd2b9d19a285aa3ba468a1d4154/tags.js"
