Setting theme check

--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -212,6 +212,7 @@
   %}
   <script>
     {% comment %} console.log("allProducts", {{ allProducts | json }}); {% endcomment %}
+    console.log("currentFormatTypes", {{ currentFormatTypes | json }});
     {% comment %} console.log("features", {{ features | json }}); {% endcomment %}
     {% comment %} console.log("shapes", {{ shapes | json }}); {% endcomment %}
     {% comment %} console.log("sizes", {{ sizes | json }}); {% endcomment %}
