--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1370,6 +1370,9 @@ select {
 .tw-items-center {
   align-items: center;
 }
+.tw-justify-center {
+  justify-content: center;
+}
 .tw-justify-between {
   justify-content: space-between;
 }
@@ -1426,6 +1429,9 @@ select {
   --tw-bg-opacity: 1;
   background-color: rgba(var(--color-button), var(--tw-bg-opacity));
 }
+.tw-p-0 {
+  padding: 0px;
+}
 .tw-px-1 {
   padding-left: 0.4rem;
   padding-right: 0.4rem;
@@ -1451,6 +1457,9 @@ select {
 }
 .tw-text-left {
   text-align: left;
+}
+.tw-text-center {
+  text-align: center;
 }
 .tw-text-3xl {
   font-size: 3rem;
@@ -1523,6 +1532,11 @@ select {
   --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(1px + var(--tw-ring-offset-width)) var(--tw-ring-color);
   box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
 }
+.tw-ring-2 {
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+}
 .tw-ring-button {
   --tw-ring-opacity: 1;
   --tw-ring-color: rgba(var(--color-button), var(--tw-ring-opacity));
@@ -1586,5 +1600,23 @@ select {
   .sm\:tw-text-xl {
     font-size: 2rem;
     line-height: 2.8rem;
+  }
+}
+@media (min-width: 750px) {
+
+  .md\:tw-grid-cols-3 {
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+}
+@media (min-width: 990px) {
+
+  .lg\:tw-grid-cols-3 {
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+}
+@media (min-width: 1600px) {
+
+  .xl\:tw-grid-cols-3 {
+    grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 }
